--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 .section{
     margin-top: 120px;
 }
+.text-area{
+    max-width: 60%;
+}
+@media screen and (max-width:768px)  {
+    .text-area{
+        max-width: 100%;
+    }
+}
 body {
     font-family: 'EB Garamond', serif;
 }
@@ -15,10 +23,6 @@ body {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
 }
 
-.header.title {
-    font-weight: 800;
-    font-size: 72px;
-}
 
 .color-overlay {
     position: absolute;
@@ -32,4 +36,15 @@ body {
     .banner{
         min-height: 40vh;
     }
+}
+
+.c-item{
+    height: 480px;
+}
+
+.img-item{
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+    
 }
